added composer demo in routes.js

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "meteor-node-stubs": "~0.2.4",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "react-komposer": "^2.0.0",
     "react-router-dom": "^4.1.1",
     "weui": "^1.1.0"
   }
